--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./test",
     "cli": "node cli.js ./archives/text1.md"
   },
   "keywords": [],
@@ -13,11 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "ansi-styles": "^6.1.0",
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "has-flag": "^5.0.1",
     "node-fetch": "^3.2.10",
     "supports-color": "^9.2.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "babel-jest": "^28.1.3",
+    "jest": "^28.1.3"
   }
 }
